# Extern-Constexpr

./: CMakeLists.txt  Header.hpp  README.md  Source.cpp
